fixed more for mobile
shorted the width of the ehader & about-text cause they wass off screen

--- a/styles.css
+++ b/styles.css
@@ -321,8 +321,12 @@ label{
   @media only screen and (max-width: 600px) {
    .about-text{
     font-size: x-large;
+    width:80%
    }
     .links{
         display: none;
+    }
+    header{
+        width:80%;
     }
   }
